[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/inventory/Inventory.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/main/main.gd" type="Script" id=2]
[ext_resource path="res://assets/img/mana.png" type="Texture" id=3]
[ext_resource path="res://assets/img/sword.png" type="Texture" id=4]
[ext_resource path="res://assets/img/bow.png" type="Texture" id=5]
[ext_resource path="res://assets/img/wand.png" type="Texture" id=6]
[ext_resource path="res://assets/img/heal.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 5.0
content_margin_top = 5.0
bg_color = Color( 0.294118, 0.356863, 0.466667, 0.517647 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 5.0
content_margin_top = 5.0
bg_color = Color( 0.466667, 0.294118, 0.294118, 0.517647 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="inventory_background" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -184.0
margin_top = 128.0
margin_right = -170.0
margin_bottom = 206.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" parent="inventory_background" instance=ExtResource( 1 )]
margin_left = 7.0
margin_top = 7.0
margin_right = 7.0
margin_bottom = 71.0
custom_constants/separation = 8

[node name="add" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -128.0
margin_right = 200.0
margin_bottom = -32.0
custom_styles/normal = SubResource( 1 )
text = "Adicionar itens"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heal_potion" type="Button" parent="add"]
margin_left = 8.0
margin_top = 24.0
margin_right = 72.0
margin_bottom = 88.0
icon = ExtResource( 7 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="magic_potion" type="Button" parent="add"]
margin_left = 88.0
margin_top = 24.0
margin_right = 152.0
margin_bottom = 88.0
icon = ExtResource( 3 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sword" type="Button" parent="add"]
margin_left = 168.0
margin_top = 24.0
margin_right = 232.0
margin_bottom = 88.0
icon = ExtResource( 4 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bow" type="Button" parent="add"]
margin_left = 248.0
margin_top = 24.0
margin_right = 312.0
margin_bottom = 88.0
icon = ExtResource( 5 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wand" type="Button" parent="add"]
margin_left = 328.0
margin_top = 24.0
margin_right = 392.0
margin_bottom = 88.0
icon = ExtResource( 6 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="remove" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -16.0
margin_right = 200.0
margin_bottom = 80.0
custom_styles/normal = SubResource( 2 )
text = "remover itens"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="remove_heal_potion" type="Button" parent="remove"]
margin_left = 8.0
margin_top = 24.0
margin_right = 72.0
margin_bottom = 88.0
icon = ExtResource( 7 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="remove_magic_potion" type="Button" parent="remove"]
margin_left = 88.0
margin_top = 24.0
margin_right = 152.0
margin_bottom = 88.0
icon = ExtResource( 3 )
expand_icon = true

[node name="remove_sword" type="Button" parent="remove"]
margin_left = 168.0
margin_top = 24.0
margin_right = 232.0
margin_bottom = 88.0
icon = ExtResource( 4 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="remove_bow" type="Button" parent="remove"]
margin_left = 248.0
margin_top = 24.0
margin_right = 312.0
margin_bottom = 88.0
icon = ExtResource( 5 )
expand_icon = true

[node name="remove_wand" type="Button" parent="remove"]
margin_left = 328.0
margin_top = 24.0
margin_right = 392.0
margin_bottom = 88.0
icon = ExtResource( 6 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="add/heal_potion" to="." method="_on_heal_potion_pressed"]
[connection signal="pressed" from="add/magic_potion" to="." method="_on_magic_potion_pressed"]
[connection signal="pressed" from="add/sword" to="." method="_on_sword_pressed"]
[connection signal="pressed" from="add/bow" to="." method="_on_bow_pressed"]
[connection signal="pressed" from="add/wand" to="." method="_on_wand_pressed"]
[connection signal="pressed" from="remove/remove_heal_potion" to="." method="_on_remove_heal_potion_pressed"]
[connection signal="pressed" from="remove/remove_magic_potion" to="." method="_on_remove_magic_potion_pressed"]
[connection signal="pressed" from="remove/remove_sword" to="." method="_on_remove_sword_pressed"]
[connection signal="pressed" from="remove/remove_bow" to="." method="_on_remove_bow_pressed"]
[connection signal="pressed" from="remove/remove_wand" to="." method="_on_remove_wand_pressed"]
